<resources>
    <string name="app_name">Test... ¡What a Test!</string>
    <string name="user">Input your email.</string>
    <string name="test">Test... ¡What a Test!</string>
    <string name="qone">What do koalas feed on?</string>
    <string name="q1">Question 1:</string>
    <string name="qtwo">Who invented the telescope?</string>
    <string name="rq11">Eucalyptus</string>
    <string name="rq12">Chamomile</string>
    <string name="rq13">Rosemary</string>
    <string name="rq14">Valerian</string>
    <string name="q2">Question 2:</string>
    <string name="rq21">Galileo Galilei</string>
    <string name="rq24">Hans Lippershey</string>
    <string name="rq23">Issac Newton</string>
    <string name="rq22">Leonardo da Vinci</string>
    <string name="q3">Question 3:</string>
    <string name="qthree">How many bones are in the adult human body?</string>
    <string name="rq33">206 huesos</string>
    <string name="rq32">126 huesos</string>
    <string name="rq31">280 huesos</string>
    <string name="rq34">234 huesos</string>
    <string name="q4">Question 4:</string>
    <string name="qfour">Which is the longest river in Spain?</string>
    <string name="rq41">Guadalquivir</string>
    <string name="rq42">Ebro</string>
    <string name="rq43">Jucar</string>
    <string name="rq44">Tajo</string>
    <string name="q5">Question 5:</string>
    <string name="qfive">Who wrote The Odyssey?</string>
    <string name="rq51">Homero</string>
    <string name="rq52">Jorge Manrique</string>
    <string name="rq53">Francisco de Quevedo</string>
    <string name="rq54">Pablo Neruda</string>
    <string name="q6">Question 6:</string>
    <string name="qsix">which is the biggest ocean?</string>
    <string name="rq61">Atlantic Ocean</string>
    <string name="rq62">Pacific Ocean</string>
    <string name="rq63">Indian Ocean</string>
    <string name="rq64">Antartic Ocean</string>
    <string name="q7">Question 7:</string>
    <string name="qseven">In what year did World War II begin?</string>
    <string name="rq71">1929</string>
    <string name="rq72">1934</string>
    <string name="rq73">1949</string>
    <string name="q8">Question 8:</string>
    <string name="qeigth">What is the fifth planet in the solar system?</string>
    <string name="rq81">Saturn</string>
    <string name="rq82">Neptune</string>
    <string name="rq83">Jupiter</string>
    <string name="rq84">Venus</string>
    <string name="q9">Question 9:</string>
    <string name="qnine">Who pronounced the phrase "I just know that I don't know anything"?</string>
    <string name="rq91">Platon</string>
    <string name="rq92">Socrates</string>
    <string name="rq93">Tales de Mileto</string>
    <string name="rq94">Heraclito</string>
    <string name="q10">Question 10:</string>
    <string name="qten">Who wrote \"Hamlet\"?</string>
    <string name="rq101">William Faulkner</string>
    <string name="rq102">Philip K. Dick</string>
    <string name="rq103">George Orwell</string>
    <string name="rq104">William Shakespeare</string>
    <string name="btnvolver">Return to the main menu</string>
    <string name="mensaje">Message</string>
    <string name="usuario">User</string>
    <string name="puntuacion">Score</string>
    <string name="empezar">¡Let\'s go!</string>
    <string name="rules">Rules</string>
    <string name="d1">According to the number of correct questions you will be evaluated.</string>
    <string name="reglas">Rules</string>
    <string name="d2">A. 10 right questions = What are you doing here nerd!</string>
    <string name="d3">B. From 7 to 9 right questions =! Hey, you\'re not bad!</string>
    <string name="d4">C. From 4 to 6 right questions = Look ... I don\'t want to scare you but... study more...</string>
    <string name="d5">D. From 1 to 3 correct questions = Did you really attend classes?</string>
    <string name="d6">Any score achieved in this App will not be published in any known medium, please feel free to respond with confidence.</string>
    <string name="adv">Ok, you are already warned. Luck!</string>
    <string name="canc">Cancel</string>
    <string name="neg">Hey, the rules are important!</string>
    <string name="camp">Obligatory field</string>
    <string name="da">Doesn´t matter</string>
    <string name="bueno">Well... Luck, I guess...</string>
    <string name="sal">Do you want to go out?</string>
    <string name="conf">Are you sure you want to exit the application?</string>
    <string name="sali">Yes, get me out of here!</string>
    <string name="conti">Well, let\'s continue with this</string>
    <string name="dp1">The scores will be reflected with 1 and 0, 1 for the correct answer and 0 for the incorrect answer.</string>
    <string name="dp2">Hey you just started, you\'re on the first question, when you answer this come and see me.</string>
    <string name="dp3">Ok, it seems that everything is going well... I guess...</string>
    <string name="dp4">I don\'t know how you go, but ... Good luck!</string>
    <string name="nerd">What are you doing here nerd!</string>
    <string name="nomal">Hey, you are not bad!</string>
    <string name="scary">Look... I don\'t want to scare you but... study more...</string>
    <string name="classes">Did you really attend classes?</string>
    <string name="alcance">I don\'t know what to tell you ... the answer is out of my reach</string>
    <string name="sa">" 50/5000 Are you sure you want to return to the main menu?"</string>
    <string name="pass">Input your password.</string>
    <string name="login">Login</string>
    <string name="count">Daily Reward</string>
    <string name="correct">Correct Answers:</string>
    <string name="wrong">Wrong Answers:</string>
    <string name="maxpoint">Max Points:</string>
    <string name="setup">Settings</string>
    <string name="logout">Log out</string>
    <string name="conflogout">Are you really going out?</string>
    <string name="usermiss">User not found</string>
</resources>
